--- a/css/style.css
+++ b/css/style.css
@@ -99,14 +99,10 @@ body {
         height: auto;
     }
 
-    .cuadricula {
-        gap: 0.25px; /* Reducir la distancia entre los cuadrados */
-    }
-
     .cuadrado {
-        width: 100px; /* Mantener tamaño adecuado para la rejilla */
-        height: 100px; /* Mantener tamaño adecuado para la rejilla */
-        font-size: 50px; /* Aumentar el tamaño de la fuente para X y O */
+        width: 90px;
+        height: 90px;
+        font-size: 18px;
     }
 
     .boton {
