--- a/css/style.css
+++ b/css/style.css
@@ -1,52 +1,48 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-@font-face {
+@font-face{
     font-family: "fuente";
     src: url('../fuente/fuente.ttf');
 }
-
-body {
+body{
     background-image: url('../imagenes/fondo.jpg');
     cursor: url('../imagenes/cursor.png'), pointer;
     backface-visibility: hidden;
-    font-family: "fuente";
 }
 
-.cuadrojuego {
-    height: 100vh;
+.cuadrojuego{
+    height: 700px;
     max-width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap:25px;
     text-align: center;
-    padding: 10px;
 }
 
-.titulojuego, .info {
+.titulojuego, .info{
+    text-align: center;
     color: black;
     background-color: white;
-    font-size: 24px;
+    font-size: 30px;
     border-radius: 15px;
-    padding: 10px;
-    width: 100%;
+    font-family: "fuente";
 }
 
-.cuadricula {
+.cuadricula{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: auto auto auto;
     gap: 2px;
-    width: 100%;
 }
 
-.cuadrado {
-    width: 100px;
-    height: 100px;
+.cuadrado{
+    width:150px;
+    height: 150px;
     border-radius: 20px;
     text-align: center;
     color: black;
@@ -55,63 +51,40 @@ body {
     align-items: center;
     background-color: grey;
     transition: background-color ease-in 0.3s;
-    font-size: 24px;
+    font-size: 100px;
+    font-family: "fuente";
 }
 
-.cuadrado:hover {
+.cuadrado:hover{
     background-color: yellow;
 }
 
-.boton {
-    display: inline-flex;
-    padding: 10px 15px;
+.boton{
+    display:inline-flex;
+    padding: 18px 18px;
     background: greenyellow;
     color: white;
     cursor: pointer;
     justify-content: center;
     font-weight: bold;
-    transition: color ease-out 0.3s;
-    font-size: 16px;
-    position: fixed;
-    bottom: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    border-radius: 10px;
+    transition:color ease-out 0.3s;
+    font-size: 20px;
+    font-family: "fuente";
+    position: absolute;
+    top: 90%;
+    right: 42%;
+    left: 42%;
 }
 
-.boton:hover {
-    background: white;
+.boton:hover{
+    background:white ;
     color: green;
     border: 1px solid green;
 }
 
 .mensaje {
-    font-size: 20px;
+    font-size: 30px;
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
-}
-
-@media screen and (max-width: 390px) {
-    .cuadrojuego {
-        width: 100%;
-        padding: 10px;
-        height: auto;
-    }
-
-    .cuadrado {
-        width: 90px;
-        height: 90px;
-        font-size: 18px;
-    }
-
-    .boton {
-        width: calc(100% - 20px);
-        padding: 10px;
-        font-size: 14px;
-    }
-
-    .mensaje {
-        font-size: 18px;
-    }
 }
