--- a/css/style.css
+++ b/css/style.css
@@ -89,29 +89,20 @@ body{
     margin-bottom: 20px;
 }
 
-@media screen and (max-width: 320px) {
-    .cuadrojuego {
-        width: 100%;
-        padding: 5px;
+@media (max-width: 768px){
+    .cuadrojuego{
+        height: 100vh;
     }
-    .cuadrado {
-        width: 100%;
-        margin: 1%;
-        font-size: 40px; /* Reduce font size for smaller screens */
+    .cuadrado{
+        width: 100px;
+        height: 100px;
+        font-size: 50px;
     }
-    .boton {
-        width: 100%;
-        padding: 15px; /* Adjust padding for smaller screens */
-        font-size: 14px; /* Adjust font size for smaller screens */
-        top: auto;
-        bottom: 5px;
-        right: 5px;
-        left: 5px;
-    }
-    .cuadricula {
-        grid-template-columns: auto;
-    }
-    .mensaje {
-        font-size: 20px; /* Adjust message font size for smaller screens */
+    .boton{
+        font-size: 15px;
+        width: 50%;
+        left: 50%;
+        transform: translateX(-50%);
+        margin: 20px 0;
     }
 }
